--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                    <p>Su objetivo es que los principiantes puedan obtener ganancias en los mercados financieros sin tener que tomar decisiones comerciales de forma activa. </p>
                </div>
                <div class="feature-item">
-                   <img src="gestión.png" alt="Gestión de Cuentas">
+                   <img src="logos/gestion.png" alt="Gestión de Cuentas">
                    <h3>Gestión de Cuentas</h3>
                    <p>La gestión de cuentas (replicas) es una estrategia que permite a los inversores replicar las operaciones de traders con más experiencia. </p>
                </div>
