--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             
                 <br>   <img  src="logos/IMG-20241215-WA0012-removebg-preview.png" class="logos2" height="50px" width="50px" alt="">
                 <img  src="logos/PLATA FIJA INTERNACIONAL.png" class="logos2" height="50px" width="50px" alt="">
-                <img  src="logos/_modern finance business logo (14)[49].png" class="logos2" height="50px" width="50px" alt="">
+                <img  src="logos/gestion2.png" class="logos2" height="50px" width="50px" alt="">
                 <img  src="logos/tts logo.png" class="logos2" height="50px" width="50px" alt="">
                  <br>
             <p class="texfooter">&copy;2025 Eagles Rich Academia. Todos los derechos reservados. </p >
