--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
            <div class="features-list">
                <div class="feature-item">
                    <img src="logos/tts%20logo.png" alt="Copia de Trading">
-                   <h3>Copia de Trading</h3>
+                   <h3>Servicio De Señales</h3>
                    <p>Su objetivo es que los principiantes puedan obtener ganancias en los mercados financieros sin tener que tomar decisiones comerciales de forma activa. </p>
                </div>
                <div class="feature-item">
                    <img src="logos/gestion.png" alt="Gestión de Cuentas">
-                   <h3>Gestión de Cuentas</h3>
+                   <h3>Inversión a plazo</h3>
                    <p>La gestión de cuentas (replicas) es una estrategia que permite a los inversores replicar las operaciones de traders con más experiencia. </p>
                </div>
               
@@ -96,7 +96,7 @@
                     <img src="perfiles/patricia.jpg" alt="Trader 3">
                     <!-- Nombre y descripción -->
                     <h3>Patricia Diaz</h3>
-                    <p>Trader, Mentor y Analista en los mercados financieros. Cofundador de Eagles Rich Capital y una de las pioneras de plata fija internacional</p>
+                    <p>Trader y Analista en los mercados financieros. Cofundador de Eagles Rich Capital y una de las pioneras de plata fija internacional</p>
                 </div>
  
 
