--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                </div>
                <div class="feature-item">
                    <img src="logos/gestion.png" alt="Gestión de Cuentas">
-                   <h3>Inversión a plazo</h3>
+                   <h3>Replica De Centas</h3>
                    <p>La gestión de cuentas (replicas) es una estrategia que permite a los inversores replicar las operaciones de traders con más experiencia. </p>
                </div>
               
                <div class="feature-item">
                    <img src="logos/data-analysis-svgrepo-com.svg" alt="Análisis Detallados">
-                   <h3>Análisis Detallados</h3>
+                   <h3>Inversión a plazo</h3>
                    <p>Ayuda a reducir el riesgo de pérdidas para los principiantes. Al copiar a los traders elite, pueden evitar errores costosos y minimizar su exposición al riesgo.
 </p>
                </div>
