--- a/metodos pay.html
+++ b/metodos pay.html
@@ -102,6 +102,21 @@
     background-color: #128C7E; /* Cambia el color al pasar el mouse */
 }
 
+.logodeairtm{
+   float:right;
+   position: absolute;
+   padding-left:40px;
+ 
+  
+
+}
+
+.logodebinance {
+    float:right;
+   position: absolute;
+   padding-left:80px;  
+}
+
     </style>
 </head>
 <body>
@@ -111,22 +126,24 @@
         <p>Selecciona tu método de pago:</p>
         
         <div class="payment-method">
-            <h2>AirTM</h2>
+            <img class="logodeairtm"   src="logos/airtm.svg" height="27px" />
+            <h2>Airtm</h2>
             <img src="img/QR/airtm_qr.jpg" alt="Código QR AirTM" class="qr-code" >
-            <p>Escanea el código QR para pagar con AirTM.</p>
+            <p>Escanea el código QR para pagar con Airtm.</p>
             <div class="wallet-address">
                 Usuario de AirTM: <strong>omar37d5753a</strong> <br>
-                Dirección de AirTM: <strong>otrocamp@gmail.com</strong>
+                Dirección de Airtm: <strong>otrocamp@gmail.com</strong>
             </div>
         </div>
 
         <div class="payment-method">
-            <h2>Binance</h2>
+            <img class="logodebinance" src="logos/binance.svg" height="27px" />
+            <h2>Binance Pay</h2>
             <img src="img/QR/binance_qr.jpg" alt="Código QR Binance" class="qr-code" >
-            <p>Escanea el código QR para pagar con Binance.</p>
+            <p>Escanea el código QR para pagar con Binance Pay.</p>
             <div class="wallet-address">
                 Id de binance: <strong>39680157</strong> <br>
-                Dirección de Binance: <strong> sercetosdeunemprendedor@gmail.com</strong>
+                Dirección de Binance Pay: <strong> sercetosdeunemprendedor@gmail.com</strong>
             </div>
         </div>
 
