--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
             
             <div class="social-buttons">
               
-                <div class="metodop">
+                <!-- <div class="metodop">
                     <img src="logos/binance.svg" height="40px" />
                     <span class="metodotitulo">Binance Pay</span>
                     <img class="qr" src="img/QR/binance_qr.jpg"  height="100px"/>
@@ -719,7 +719,7 @@
                     <img src="logos/airtm.svg" height="40px" />
                     <span class="metodotitulo_airtm">Pagos AIRTM</span>
                     <img class="qr_airtm" src="img/QR/airtm_qr.jpg"  height="100px"/>
-                </div>  
+                </div>   -->
 
                 <a href="https://t.me/PlataFijaInternacional" class="social-button telegram"  target="_blank" rel="noopener noreferrer">
                     <img src="logos/telegram.svg" alt="Telegram">
